@@ -1,4 +1,4 @@
-/*	$NetBSD: rtadvd.c,v 1.9.4.1 2000/07/20 00:30:15 itojun Exp $	*/
+/*	$NetBSD: rtadvd.c,v 1.9.4.2 2003/03/17 16:13:35 itojun Exp $	*/
 /*	$KAME: rtadvd.c,v 1.31 2000/06/23 06:34:51 itojun Exp $	*/
 
 /*
@@ -1125,12 +1125,22 @@ nd6_options(struct nd_opt_hdr *hdr, int limit,
 	int optlen = 0;
 
 	for (; limit > 0; limit -= optlen) {
+		if (limit < sizeof(struct nd_opt_hdr)) {
+			syslog(LOG_INFO, "<%s> short option header",
+			    __FUNCTION__);
+			goto bad;
+		}
+
 		hdr = (struct nd_opt_hdr *)((caddr_t)hdr + optlen);
-		optlen = hdr->nd_opt_len << 3;
 		if (hdr->nd_opt_len == 0) {
-			syslog(LOG_ERR,
-			       "<%s> bad ND option length(0) (type = %d)",
-			       __FUNCTION__, hdr->nd_opt_type);
+			syslog(LOG_INFO,
+				"<%s> bad ND option length(0) (type = %d)",
+				__FUNCTION__, hdr->nd_opt_type);
+			goto bad;
+		}
+		optlen = hdr->nd_opt_len << 3;
+		if (optlen > limit) {
+			syslog(LOG_INFO, "<%s> short option", __FUNCTION__);
 			goto bad;
 		}
 
@@ -1150,10 +1160,24 @@ nd6_options(struct nd_opt_hdr *hdr, int limit,
 			continue;
 		}
 
+		/*
+		 * Option length check.  Do it here for all fixed-length
+		 * options.
+		 */
+		if ((hdr->nd_opt_type == ND_OPT_MTU &&
+		    (optlen != sizeof(struct nd_opt_mtu))) ||
+		    ((hdr->nd_opt_type == ND_OPT_PREFIX_INFORMATION &&
+		    optlen != sizeof(struct nd_opt_prefix_info)))) {
+			syslog(LOG_INFO, "<%s> invalid option length",
+			    __FUNCTION__);
+			continue;
+		}
+
 		switch(hdr->nd_opt_type) {
 		 case ND_OPT_SOURCE_LINKADDR:
 		 case ND_OPT_TARGET_LINKADDR:
 		 case ND_OPT_REDIRECTED_HEADER:
+			break;	/* we don't care about these options */
 		 case ND_OPT_MTU:
 			 if (ndopts->nd_opt_array[hdr->nd_opt_type]) {
 				 syslog(LOG_INFO,
